modals + footer fix - change anchor tag styling - change images to figures with captions - add info to top with link and dates - added css for figures - fixed spacing of footer icons - changed hover on scroller - fixed modal sizing, padding, margins on mobiles - rotate animation on modal close - added info css - add image hover effect

--- a/css/main.css
+++ b/css/main.css
@@ -78,17 +78,33 @@ h6 {
 }
 
 a {
-  text-decoration: none;
-  color: var(--blue);
+  color: inherit;
+  text-decoration: underline;
+  transition: color 0.15s ease-in-out;
 }
 
 a:hover {
-  text-decoration: underline;
+  color: var(--blue);
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+figure {
+  margin: 1rem 0;
+}
+
+figure img {
+  margin: 0;
+}
+
+figure figcaption {
+  line-height: 1;
+  font-size: 0.75rem;
+  font-style: italic;
+  text-align: right;
 }
 
 button,
@@ -322,12 +338,12 @@ section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 50px auto;
+  margin: 25px auto;
 }
 
 #footer #socials a {
   color: var(--mono-1);
-  margin: 0 1rem;
+  margin: 1rem;
   line-height: 1;
   transition: transform 0.15s ease-in-out;
 }
@@ -347,7 +363,7 @@ section {
 }
 
 #footer #info a {
-  color: inherit;
+  text-decoration: none;
 }
 
 #scroller {
@@ -375,7 +391,7 @@ section {
 
 #scroll-up:hover,
 #scroll-down:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 #scroller svg {
@@ -412,7 +428,7 @@ section {
   color: var(--base);
   max-width: 750px;
   margin: 100px auto;
-  padding: 50px;
+  padding: 75px;
 }
 
 #modals article.show {
@@ -423,20 +439,29 @@ section {
 #modals .close {
   float: right;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 1;
   cursor: pointer;
   transition: transform 0.15s ease-in-out;
 }
 
 #modals .close:hover {
-  transform: scale(1.2);
+  transform: scale(1.25) rotate(90deg);
+}
+
+#modals .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 #modals img {
   border: solid var(--mono-3) 3px;
-  margin: 0.5rem 0;
   transition: transform 0.05s ease-in-out;
+}
+
+#modals img:hover {
+  transform: scale(1.5);
 }
 
 @media (max-height: 600px) {
@@ -447,20 +472,23 @@ section {
 
 @media (max-width: 800px) {
   #modals article {
-    margin: 50px 12.5px;
+    margin-left: 25px;
+    margin-right: 25px;
     width: auto;
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 700px) {
   #modals article {
-    padding: 25px;
+    padding: 50px;
   }
 }
 
-@media (min-width: 1500px) {
-  #modals img:hover {
-    transform: scale(1.5);
+@media (max-width: 600px) {
+  #modals article {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 35px;
   }
 }
 
